--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-	id 'fabric-loom' version '0.2.2-SNAPSHOT'
+	id 'fabric-loom' version '0.2.6-SNAPSHOT'
 }
 
 sourceCompatibility = JavaVersion.VERSION_1_8
@@ -12,10 +12,14 @@ minecraft {
 }
 
 dependencies {
-	minecraft "com.mojang:minecraft:1.14"
-	mappings "net.fabricmc:yarn:1.14+build.3"
-	modCompile "net.fabricmc:fabric-loader:0.4.4+build.139"
-	modCompile "net.fabricmc:fabric:0.2.7+build.127"
+	minecraft "com.mojang:minecraft:1.15.2"
+	mappings "net.fabricmc:yarn:1.15.2+build.1:v2"
+	modCompile "net.fabricmc:fabric-loader:0.7.5+build.178"
+
+	// Fabric API. This is technically optional, but you probably want it anyway.
+	modCompile "net.fabricmc.fabric-api:fabric-api:0.4.29+build.290-1.15"
+
+	
 }
 
 processResources {
